# file_transfer

./: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
src/: ft_client.cpp  ft_server.cpp  ft_utils.cpp  ft_utils.hpp
src/file/: ft_file.cpp  ft_file.hpp  ft_file_meta.cpp  ft_file_meta.hpp
src/loop/: ft_poll_grp.cpp  ft_poll_grp.hpp  ft_pollable.hpp  ft_signal.cpp  ft_signal.hpp
src/netwrk/: ft_conn.cpp  ft_conn.hpp  ft_conn_listener.cpp  ft_conn_listener.hpp  ft_conn_utils.cpp  ft_conn_utils.hpp
src/protocol/: ft_msg.cpp  ft_msg.hpp  ft_msg_fctry.cpp  ft_msg_fctry.hpp
src/request/: ft_req.hpp  ft_req_brkr.cpp  ft_req_brkr.hpp  ft_req_hndlr.hpp
test/: Dockerfile  ft_client_test.sh
